fixed issues with scroll bar  spilling outside of the page

--- a/webpage/style.css
+++ b/webpage/style.css
@@ -66,9 +66,8 @@ header {
     flex-direction: row;
     flex-wrap: nowrap;
     overflow-x: scroll;
-    overflow-y: none;
-
-    width: 90%;
+    overflow-y: hidden;
+    
     gap: 20px;
     padding: 20px;
 }
